--- a/assets/css/challenge-week1-style.css
+++ b/assets/css/challenge-week1-style.css
@@ -86,42 +86,21 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead .benefit-brand .benefit-cost{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3 .benefit-brand h3 .benefit-cost h3{
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
 .benefit-brand img {
     display: block;
     margin: 10px auto;
@@ -164,7 +143,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.search-engine-optimization img. social-media-marketing img {
     padding-bottom: 15px;
     float: left;
     max-height: 220px;
@@ -173,12 +152,6 @@ p {
 .online-reputation-management img {
     padding-bottom: 15px;
     float: right;
-    max-height: 220px;
-}
-
-.social-media-marketing img {
-    padding-bottom: 15px;
-    float: left;
     max-height: 220px;
 }
 
