--- a/assets/css/challenge-week1-style.css
+++ b/assets/css/challenge-week1-style.css
@@ -143,7 +143,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img. social-media-marketing img {
+.search-engine-optimization img {
     padding-bottom: 15px;
     float: left;
     max-height: 220px;
@@ -155,17 +155,13 @@ p {
     max-height: 220px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+.social-media-marketing img {
+    padding-bottom: 15px;
+    float: left;
+    max-height: 220px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2{
+.h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
